--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install boost
-      run: apt-get install -y libboost-all-dev
+      run: sudo apt-get install -y libboost-all-dev
     - name: make
       run: make test
     - name: test
